base/ops/loadbalancer/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy
  namespace: jitsi
spec:
  selector:
    k8s-app: haproxy
  ports:
    - name: "http"
      port: 80
  type: ClusterIP
