base/ops/loadbalancer/haproxy0-service.yaml
# Service for peering of HAProxies. 
apiVersion: v1
kind: Service
metadata:
  name: haproxy-0
  namespace: jitsi
spec:
  selector:
    statefulset.kubernetes.io/pod-name: haproxy-0
  ports:
    - name: "peering"
      port: 1024
  type: ClusterIP
