base/ops/loadbalancer/haproxy1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-1
  namespace: loadbalancer
spec:
  selector:
    statefulset.kubernetes.io/pod-name: haproxy-1
  ports:
    - name: "peering"
      port: 1024
  type: ClusterIP
